# sqlrustgo

./: .coverage_analysis.md  .coverage_deep_analysis.md  .final_analysis_v140.md  .gh_env  .gitignore  .issue_status.json  .pr_body_semantic.md  .release-checklist.md  .sql_history  .v150_performance_analysis.md  2026_02_03_usage_report.md  AGENTS.md  ARCHITECTURE_RULES.md  BRANCH_GOVERNANCE.md  CHANGELOG.md  CI_TRIGGER_ALPHA.md  CLAUDE.md  CODEOWNERS  COMMIT_CONVENTION.md  CONTRIBUTING.md  CURRENT_VERSION.md  Cargo.toml  Dockerfile.act-runner  Dockerfile.act-runner-v2  Dockerfile.act-runner-with-docker  Dockerfile.gate-runner  MIGRATION_GUIDE.md  Makefile  README.md  RELEASE_ANNOUNCEMENT.md  RELEASE_ANNOUNCEMENT_160.md  RELEASE_GOVERNANCE.md  RELEASE_NOTES.md  ROADMAP.md  SOUL.md  SQLRUSTGO_210_ANALYSIS_REPORT.md  SQLRUSTGO_PROJECT_ANALYSIS_REPORT.md  TEST_REPORT.md  TPC-H-PERFORMANCE-COMPARISON-v2.1.0.md  TPC-H-SF1-BENCHMARK-REPORT.md  (+206 more)
crates/agentsql/: Cargo.toml
crates/agentsql/src/: column_masking.rs  error.rs  explain.rs  gateway.rs  lib.rs  memory.rs  nl2sql.rs  optimizer.rs  policy_engine.rs  schema.rs  stats.rs
crates/bench/: Cargo.toml
crates/bench-cli/: Cargo.toml
crates/bench-cli/src/: cli.rs  lib.rs  main.rs  metrics.rs  reporter.rs  tpch_bench.rs  tpch_data.rs  tpch_import.rs
crates/bench/examples/: tpch_compare.rs  tpch_data_gen.rs  tpch_fast_importer.rs  tpch_sf10_importer.rs
crates/bench/src/: analysis.rs  benchmark_runner.rs  benchmark_suite.rs  cli.rs  config.rs  lib.rs  main.rs  memory.rs  mysql_config.rs  runner.rs  validation.rs
crates/bench/tests/: oltp_test.rs  tpch_test.rs
crates/catalog/: Cargo.toml
crates/catalog/src/: auth.rs  auth_rls.rs  catalog.rs  column.rs  data_type.rs  error.rs  event.rs  index.rs  lib.rs  rebuild.rs  schema.rs  stored_proc.rs  table.rs
crates/catalog/tests/: auth_rls_test.rs
crates/code-graph/: Cargo.toml
crates/code-graph-cli/: Cargo.toml
crates/code-graph-cli/src/: main.rs
crates/code-graph/src/: lib.rs
crates/common/: Cargo.toml
crates/common/src/: benchmark_result.rs  connection_pool.rs  latency_stats.rs  lib.rs  logging.rs  metrics.rs  metrics_aggregator.rs  network_metrics.rs
crates/distributed/: Cargo.toml  build.rs
crates/distributed/benches/: sharding_benchmark.rs
crates/distributed/examples/: distributed_test_server.rs  grpc_test_client.rs
crates/distributed/proto/: distributed.proto
crates/distributed/src/: consensus.rs  cross_shard_query.rs  distributed_lock.rs  error.rs  failover_manager.rs  group_membership.rs  group_replication.rs  group_replication_raft.rs  grpc_client.rs  grpc_server.rs  lib.rs  mts.rs  multi_source.rs  partition.rs  proto.rs  raft.rs  read_write_splitter.rs  replica_sync.rs  replication.rs  semisync.rs  shard_manager.rs  shard_router.rs  two_phase_commit.rs  worker_pool.rs  xa_coordinator.rs  xa_mvcc_bridge.rs
crates/distributed/tests/: distributed_e2e_test.rs  distributed_integration_test.rs  group_replication_e2e_test.rs  read_write_splitter_test.rs  test_semisync.rs  test_xa.rs
crates/executor/: Cargo.toml  default_4107236028889529032_0_57879.profraw
crates/executor/benches/: vec_benchmark.rs
crates/executor/src/: audit_logger.rs  ddl_executor.rs  event.rs  executor.rs  executor_metrics.rs  explain.rs  filter.rs  harness.rs  index_scan.rs  join_planner.rs  lib.rs  local_executor.rs  merge.rs  mock_storage.rs  operator_profile.rs  parallel_executor.rs  parallel_vector_executor.rs  pipeline_trace.rs  projection.rs  query_cache.rs  query_cache_config.rs  query_cache_metrics.rs  reusable_vec.rs  scan.rs  session_config.rs  sql_log.rs  sql_normalizer.rs  stored_proc.rs  task_scheduler.rs  test_data.rs  traced_executor.rs  transactional_executor.rs  trigger.rs  vec_simd.rs  vec_table_scan.rs  vector_executor.rs  vector_scan.rs  vectorization.rs  window_executor.rs
crates/executor/tests/: aggregate_functions_test.rs  aggregate_tests.rs  cold_storage_test.rs  coverage_tests.rs  cte_tests.rs  ddl_execution_test.rs  delete_execution_test.rs  dml_execution_tests.rs  event_executor_tests.rs  execution_chain_regression_test.rs  executor_error_path_test.rs  filter_tests.rs  four_eyes_test.rs  fts_tests.rs  full_outer_join_test.rs  hash_join_left_null_test.rs  hash_join_types_test.rs  index_scan_predicate_test.rs  integration_test.rs  join_tests.rs  memory_footprint_test.rs  merge_test.rs  multi_table_update_test.rs  patch_coverage_hooks.rs  patch_error_path_coverage.rs  patch_error_tests.rs  patch_expression_tests.rs  patch_limit_edge_tests.rs  patch_stored_proc_coverage.rs  patch_trigger_eval_coverage.rs  pipeline_tests.rs  ps_setup_actors_test.rs  query_cache_test.rs  recursive_cte_test.rs  session_config_test.rs  (+15 more)
crates/gis/: Cargo.toml
crates/gmp/: Cargo.toml
crates/graph/: Cargo.toml
crates/mysql-server/: Cargo.toml
crates/observability/: Cargo.toml
crates/optimizer/: Cargo.toml
crates/parser/: AGENTS.md  Cargo.toml
crates/planner/: Cargo.toml
crates/qa/: Cargo.toml
crates/qmd-bridge/: Cargo.toml
crates/rag/: Cargo.toml
crates/security/: Cargo.toml
crates/server/: Cargo.toml
crates/sql-cli/: Cargo.toml
crates/sql-corpus/: Cargo.toml  sql_corpus
crates/sql-diff-runner/: Cargo.toml
crates/storage/: AGENTS.md  Cargo.toml  default_283821722008417411_0_17978.profraw  default_283821722008417411_0_17997.profraw  default_283821722008417411_0_18000.profraw  default_283821722008417411_0_18003.profraw  default_283821722008417411_0_18143.profraw  default_283821722008417411_0_18188.profraw  default_283821722008417411_0_18213.profraw  default_283821722008417411_0_18218.profraw  default_283821722008417411_0_18221.profraw  default_283821722008417411_0_18224.profraw  default_283821722008417411_0_18229.profraw  default_283821722008417411_0_20119.profraw  default_283821722008417411_0_20138.profraw  default_283821722008417411_0_20148.profraw  default_7781164306682609153_0_69479.profraw  default_7781164306682609153_0_69800.profraw
crates/sync/: Cargo.toml  build.rs
crates/telemetry/: Cargo.toml
crates/test-runner/: Cargo.toml
(+3352 files in other folders)
