# SQLRustGo v1.6.1

[workspace]
members = [
    "crates/common",
    "crates/parser",
    "crates/planner",
    "crates/optimizer",
    "crates/executor",
    "crates/storage",
    "crates/catalog",
    "crates/transaction",
    "crates/server",
    "crates/bench",
    "crates/bench-cli",
    "crates/sql-cli",
    "crates/sqlancer",
    "crates/transaction-stress",
    "crates/information-schema",
    "crates/query-stats",
    "test/sql92",
]

[workspace.package]
version = "1.6.1"
edition = "2021"
authors = ["SQLRustGo Team"]
license = "MIT"

[workspace.dependencies]
# Crates
sqlrustgo-common = { path = "crates/common" }
sqlrustgo-types = { path = "crates/types" }
sqlrustgo-parser = { path = "crates/parser" }
sqlrustgo-planner = { path = "crates/planner" }
sqlrustgo-optimizer = { path = "crates/optimizer" }
sqlrustgo-executor = { path = "crates/executor" }
sqlrustgo-storage = { path = "crates/storage" }
sqlrustgo-catalog = { path = "crates/catalog" }
sqlrustgo-transaction = { path = "crates/transaction" }
sqlrustgo-server = { path = "crates/server" }

# External dependencies
tokio = { version = "1.0", features = ["full"] }
async-trait = "0.1"
anyhow = "1.0"
thiserror = "2.0"
serde = { version = "1.0", features = ["derive"] }
regex = "1.10"
log = "0.4"
env_logger = "0.11"
hex = "0.4"
bytes = "1.0"
lru-cache = "0.1.2"
ctrlc = "3.5.2"
parking_lot = "0.12"
serde_json = "1.0"
num_cpus = "1.17"
tempfile = "3.25.0"
criterion = "0.8"
miniz_oxide = "0.7"
rand = "0.8"
fnv = "1.0"

[dev-dependencies]
criterion = "0.8"
tempfile = "3.25.0"
serde_yaml = "0.9"
rand = "0.8"
clap = { version = "4.0", features = ["derive"] }

[package]
name = "sqlrustgo"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
sqlrustgo-common.workspace = true
sqlrustgo-types.workspace = true
sqlrustgo-parser.workspace = true
sqlrustgo-planner.workspace = true
sqlrustgo-optimizer.workspace = true
sqlrustgo-executor.workspace = true
sqlrustgo-storage.workspace = true
sqlrustgo-catalog.workspace = true
sqlrustgo-transaction.workspace = true
sqlrustgo-server.workspace = true
tokio.workspace = true
async-trait.workspace = true
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
log.workspace = true
env_logger.workspace = true
hex.workspace = true
bytes.workspace = true
lru-cache.workspace = true
ctrlc.workspace = true
serde_json.workspace = true

[[test]]
name = "ci_test"
path = "tests/ci/ci_test.rs"

[[bench]]
name = "sql_operations"
harness = false

[[bench]]
name = "lexer_bench"
harness = false

[[bench]]
name = "parser_bench"
harness = false

[[bench]]
name = "bench_aggregate"
harness = false

[[bench]]
name = "bench_insert"
harness = false

[[bench]]
name = "bench_v130"
harness = false

[[bench]]
name = "bench_v140"
harness = false

[[bench]]
name = "bench_cbo"
harness = false

[[bench]]
name = "tpch_bench"
harness = false

# [[bin]]
# name = "tpch_benchmark"
# path = "benches/tpch_comprehensive_main.rs"

[[example]]
name = "tpch_data_gen"
path = "crates/bench/examples/tpch_data_gen.rs"

[dependencies.rusqlite]
version = "0.32"
features = ["bundled"]

[dev-dependencies.mysql]
version = "25"

[[test]]
name = "optimizer_rules_test"
path = "tests/unit/optimizer_rules_test.rs"


[[test]]
name = "buffer_pool_test"
path = "tests/ci/buffer_pool_test.rs"


[[test]]
name = "page_test"
path = "tests/integration/page_test.rs"


[[test]]
name = "executor_test"
path = "tests/integration/executor_test.rs"

[[test]]
name = "planner_test"
path = "tests/integration/planner_test.rs"


[[test]]
name = "binary_format_test"
path = "tests/binary_format_test.rs"

[[test]]
name = "optimizer_stats_test"
path = "tests/integration/optimizer_stats_test.rs"

[[test]]
name = "types_value_test"
path = "tests/unit/types_value_test.rs"

[[test]]
name = "query_cache_config_test"
path = "tests/unit/query_cache_config_test.rs"

[[test]]
name = "server_health_test"
path = "tests/unit/server_health_test.rs"

[[test]]
name = "bplus_tree_test"
path = "tests/unit/bplus_tree_test.rs"

[[test]]
name = "optimizer_cost_test"
path = "tests/unit/optimizer_cost_test.rs"

[[test]]
name = "local_executor_test"
path = "tests/unit/local_executor_test.rs"

[[test]]
name = "query_cache_test"
path = "tests/unit/query_cache_test.rs"

[[test]]
name = "vectorization_test"
path = "tests/unit/vectorization_test.rs"

[[test]]
name = "file_storage_test"
path = "tests/unit/file_storage_test.rs"

[[test]]
name = "crash_recovery_test"
path = "tests/stress/crash_recovery_test.rs"

[[test]]
name = "stress_test"
path = "tests/stress/stress_test.rs"

[[test]]
name = "concurrency_stress_test"
path = "tests/stress/concurrency_stress_test.rs"

[[test]]
name = "production_scenario_test"
path = "tests/stress/production_scenario_test.rs"

[[test]]
name = "teaching_scenario_test"
path = "tests/integration/teaching_scenario_test.rs"

[[test]]
name = "performance_test"
path = "tests/integration/performance_test.rs"

[[test]]
name = "mysql_tpch_test"
path = "tests/integration/mysql_tpch_test.rs"

[[test]]
name = "mvcc_concurrency_test"
path = "tests/anomaly/mvcc_concurrency_test.rs"

[[test]]
name = "crash_injection_test"
path = "tests/anomaly/crash_injection_test.rs"

[[test]]
name = "catalog_consistency_test"
path = "tests/anomaly/catalog_consistency_test.rs"

[[test]]
name = "long_run_stability_test"
path = "tests/anomaly/long_run_stability_test.rs"

[[test]]
name = "qps_benchmark_test"
path = "tests/anomaly/qps_benchmark_test.rs"

[[test]]
name = "transaction_isolation_test"
path = "tests/anomaly/transaction_isolation_test.rs"

[[test]]
name = "join_test"
path = "tests/anomaly/join_test.rs"

[[test]]
name = "server_integration_test"
path = "tests/integration/server_integration_test.rs"

[[test]]
name = "set_operations_test"
path = "tests/anomaly/set_operations_test.rs"

[[test]]
name = "view_test"
path = "tests/anomaly/view_test.rs"

[[test]]
name = "transaction_timeout_test"
path = "tests/anomaly/transaction_timeout_test.rs"

[[test]]
name = "datetime_type_test"
path = "tests/anomaly/datetime_type_test.rs"

[[test]]
name = "boundary_test"
path = "tests/anomaly/boundary_test.rs"

[[test]]
name = "error_handling_test"
path = "tests/anomaly/error_handling_test.rs"

[[test]]
name = "aggregate_type_test"
path = "tests/anomaly/aggregate_type_test.rs"

[[test]]
name = "null_handling_test"
path = "tests/anomaly/null_handling_test.rs"
