# SQLRustGo v2.5.0

[workspace]
members = [
    "crates/common",
    "crates/parser",
    "crates/planner",
    "crates/optimizer",
    "crates/executor",
    "crates/storage",
    "crates/catalog",
    "crates/transaction",
    "crates/server",
    "crates/telemetry",
    "crates/network",
    "crates/agentsql",
    "crates/bench",
    "crates/bench-cli",
    "crates/sql-cli",
    "crates/tools",
    "crates/sqlancer",
    "crates/transaction-stress",
    "crates/information-schema",
    "crates/query-stats",
    "crates/test-registry",
    "crates/test-runner",
    "crates/test-results",
    "crates/test-reporter",
    "crates/gmp",
    "crates/vector",
    "crates/rag",
    "crates/graph",
    "crates/distributed",
    "crates/unified-storage",
    "crates/unified-query",
    "crates/sql-corpus",
    "crates/types",
    "crates/mysql-server",
    "crates/qmd-bridge",
]

[workspace.package]
version = "2.5.0"
edition = "2021"
authors = ["SQLRustGo Team"]
license = "MIT"

[workspace.dependencies]
sqlrustgo-common = { path = "crates/common" }
sqlrustgo-types = { path = "crates/types" }
sqlrustgo-parser = { path = "crates/parser" }
sqlrustgo-planner = { path = "crates/planner" }
sqlrustgo-optimizer = { path = "crates/optimizer" }
sqlrustgo-executor = { path = "crates/executor" }
sqlrustgo-storage = { path = "crates/storage" }
sqlrustgo-catalog = { path = "crates/catalog" }
sqlrustgo-transaction = { path = "crates/transaction" }
sqlrustgo-server = { path = "crates/server" }
sqlrustgo-telemetry = { path = "crates/telemetry" }
sqlrustgo-network = { path = "crates/network" }
sqlrustgo-gmp = { path = "crates/gmp" }
sqlrustgo-agentsql = { path = "crates/agentsql" }
sqlrustgo-vector = { path = "crates/vector" }
sqlrustgo-graph = { path = "crates/graph" }
sqlrustgo-sql-corpus = { path = "crates/sql-corpus" }
sqlrustgo-qmd-bridge = { path = "crates/qmd-bridge" }

tokio = { version = "1.0", features = ["full"] }
tonic = "0.14"
async-trait = "0.1"
anyhow = "1.0"
thiserror = "2.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
env_logger = "0.11"
hex = "0.4"
bytes = "1.0"
lru-cache = "0.1.2"
ctrlc = "3.5.2"
serde_json = "1.0"
tempfile = "3.25.0"
criterion = "0.5"
miniz_oxide = "0.7"
memmap2 = "0.9"
lz4_flex = "0.11"
snap = "1.1"
zstd = "0.13"
rand = "0.8"
sha2 = "0.10"
hmac = "0.12"
pbkdf2 = { version = "0.12", features = ["simple"] }
fnv = "1.0"
proptest = "1.1"
arrow = { version = "58.1.0" }
parquet = { version = "58.1.0" }
rust_decimal = "1.0"
parking_lot = "0.12"

[dev-dependencies]
criterion = "0.5"
tempfile = "3.25.0"
serde_yaml = "0.9"
rand = "0.8"
clap = { version = "4.0", features = ["derive"] }
proptest = "1.1"
sqlrustgo-server = { path = "crates/server" }
sqlrustgo-transaction = { path = "crates/transaction" }
sqlrustgo-security = { path = "crates/security" }
sqlrustgo-telemetry = { path = "crates/telemetry" }
sqlrustgo-gmp = { path = "crates/gmp" }
query-stats = { path = "crates/query-stats" }
sqlrustgo-tools = { path = "crates/tools" }
sqlrustgo-vector = { path = "crates/vector" }
sqlrustgo-graph = { path = "crates/graph" }
sqlrustgo-unified-query = { path = "crates/unified-query" }
sqlrustgo-distributed = { path = "crates/distributed" }

[package]
name = "sqlrustgo"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
sqlrustgo-common.workspace = true
sqlrustgo-types.workspace = true
sqlrustgo-parser.workspace = true
sqlrustgo-planner.workspace = true
sqlrustgo-optimizer.workspace = true
sqlrustgo-executor.workspace = true
sqlrustgo-storage.workspace = true
sqlrustgo-catalog.workspace = true
sqlrustgo-transaction.workspace = true
sqlrustgo-server.workspace = true
tokio.workspace = true
async-trait.workspace = true
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
log.workspace = true
env_logger.workspace = true
hex.workspace = true
bytes.workspace = true
lru-cache.workspace = true
ctrlc.workspace = true
serde_json.workspace = true

[[test]]
name = "ci_test"
path = "tests/ci_test.rs"

[[bench]]
name = "sql_operations"
harness = false

[[bench]]
name = "lexer_bench"
harness = false

[[bench]]
name = "parser_bench"
harness = false

[[bench]]
name = "bench_insert"
harness = false

[[bench]]
name = "bench_v130"
harness = false

[[bench]]
name = "bench_v140"
harness = false

[[bench]]
name = "bench_cbo"
harness = false

[[bench]]
name = "tpch_bench"
harness = false

[[bench]]
name = "bench_columnar"
harness = false

[[example]]
name = "tpch_data_gen"
path = "crates/bench/examples/tpch_data_gen.rs"

[dependencies.rusqlite]
version = "0.39"
features = ["bundled"]

[dev-dependencies.mysql]
version = "25"

[[test]]
name = "buffer_pool_test"
path = "tests/ci/buffer_pool_test.rs"

[[test]]
name = "buffer_pool_benchmark_test"
path = "tests/ci/buffer_pool_benchmark_test.rs"

[[test]]
name = "binary_format_test"
path = "tests/binary_format_test.rs"

[[test]]
name = "regression_test"
path = "tests/regression_test.rs"

[[test]]
name = "wal_integration_test"
path = "tests/wal_integration_test.rs"

[[test]]
name = "parser_token_test"
path = "tests/parser_token_test.rs"

[[test]]
name = "cbo_integration_test"
path = "tests/cbo_integration_test.rs"

[[test]]
name = "stored_proc_catalog_test"
path = "tests/stored_proc_catalog_test.rs"

[[test]]
name = "page_io_benchmark_test"
path = "tests/page_io_benchmark_test.rs"

[[test]]
name = "data_loader"
path = "tests/data_loader.rs"

[[test]]
name = "e2e_query_test"
path = "tests/e2e/e2e_query_test.rs"

[[test]]
name = "e2e_observability_test"
path = "tests/e2e/observability_test.rs"

[[test]]
name = "e2e_monitoring_test"
path = "tests/e2e/monitoring_test.rs"

[[test]]
name = "stored_procedure_parser_test"
path = "tests/stored_procedure_parser_test.rs"

[[test]]
name = "scheduler_integration_test"
path = "crates/server/tests/scheduler_integration_test.rs"

# Memory limit for tests: 8GB (8 * 1024 * 1024 * 1024 bytes)
# This prevents any single test from consuming excessive memory
[profile.test]
opt-level = 0
debug = 1