[package]
name = "sqlrustgo-bench-cli"
version = "1.6.0"
edition = "2021"
authors = ["SQLRustGo Team"]
license = "MIT"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
sqlrustgo = { path = "../../" }
sqlrustgo-executor = { path = "../executor" }
sqlrustgo-storage = { path = "../storage" }
sqlrustgo-server = { path = "../server" }
tokio = { version = "1.0", features = ["full"] }

[dev-dependencies]
tempfile = "3.25"
