[package]
name = "sqlrustgo-bench"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
rand = "0.8"
hdrhistogram = "7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
async-trait = "0.1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
tokio-postgres = "0.7"
rusqlite = { version = "0.32", features = ["bundled"] }
sqlrustgo = { path = "../.." }
sqlrustgo-storage = { path = "../storage" }
