[package]
name = "sqlrustgo-catalog"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
sqlrustgo-common.workspace = true
sqlrustgo-types.workspace = true
sqlrustgo-storage.workspace = true
serde.workspace = true
thiserror.workspace = true
log.workspace = true
sha2 = "0.10"
hmac = "0.12"
pbkdf2 = { version = "0.12", features = ["simple"] }
rand.workspace = true

[dev-dependencies]
tempfile.workspace = true
