[package]
name = "sqlrustgo-catalog"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
sqlrustgo-common.workspace = true
sqlrustgo-types.workspace = true
serde.workspace = true
thiserror.workspace = true
log.workspace = true
hmac = "0.12"
pbkdf2 = "0.12"
rand = "0.8"
sha2 = "0.10"

[dev-dependencies]
tempfile.workspace = true
