[package]
name = "sqlrustgo-code-graph"
version = "0.1.0"
edition = "2021"
description = "Graph-native code intelligence system for SQLRustGo"

[dependencies]
# AST parsing
syn = { version = "2.0", features = ["full", "parsing", "extra-traits"] }
proc-macro2 = "1.0"
quote = "1.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Graph
indexmap = "2.0"  # insertion-order-preserving HashMap for graph stability
rustc-hash = "1.1"  # faster hashing for large graphs
smallvec = "1.10"  # small stack-allocated vectors

# File watching / incremental
notify = "8.2"  # file system watcher for incremental updates
walkdir = "2.4"  # directory traversal

# Hashing (stable node IDs)
sha2 = "0.10"
hex = "0.4"

# CLI
clap = { version = "4.4", features = ["derive"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
tempfile = "3.8"
similar = "2.4"  # for diff-based testing

[features]
default = []
# Enable LLM semantic enrichment (requires Ollama or OpenAI API)
llm = []
