[package]
name = "sqlrustgo-common"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
serde.workspace = true
serde_json = "1.0"
thiserror.workspace = true
log.workspace = true
anyhow.workspace = true
async-trait.workspace = true
num_cpus = "1.17"
chrono = "0.4"
flate2 = "1.0"
tempfile.workspace = true
