[package]
name = "sqlrustgo-distributed"
version = "0.1.0"
edition = "2021"
authors = ["SQLRustGo Team"]
description = "Distributed database support with sharding and 2PC"

[build-dependencies]
tonic-build = "0.12"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1.0", features = ["sync", "time", "rt", "macros"] }
tracing = "0.1"
tonic = "0.12"
prost = "0.13"
prost-types = "0.13"
tokio-stream = "0.1"
futures = "0.3"
async-trait = "0.1"
http = "1.0"
tower = "0.5"

[build-dependencies]
tonic-build = "0.12"
prost-build = "0.13"

[dev-dependencies]
tempfile = "3.0"
