[package]
name = "sqlrustgo-distributed"
version = "0.1.0"
edition = "2021"
authors = ["SQLRustGo Team"]
description = "Distributed database support with sharding and 2PC"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1.0", features = ["sync", "time", "rt"] }
tracing = "0.1"

[dev-dependencies]
tempfile = "3.0"
