[package]
name = "sqlrustgo-executor"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
sqlrustgo-common.workspace = true
sqlrustgo-types.workspace = true
sqlrustgo-planner.workspace = true
sqlrustgo-storage.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
log.workspace = true
rand = "0.8"
parking_lot.workspace = true
lazy_static = "1.4"

[dev-dependencies]
tempfile.workspace = true
rand = "0.8"
mockall = "0.12"
