[package]
name = "sqlrustgo-gmp"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "GMP document retrieval and vector search extension for SQLRustGo"

[dependencies]
sqlrustgo-types = { path = "../types" }
sqlrustgo-storage = { path = "../storage" }
sqlrustgo-parser = { path = "../parser" }
sqlrustgo-planner = { path = "../planner" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
anyhow = "1.0"
parking_lot = "0.12"
sha2.workspace = true
async-trait = "0.1"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1.0", features = ["rt-multi-thread", "macros"] }

[dev-dependencies]
tempfile.workspace = true
