[package]
name = "sqlrustgo-gmp"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "GMP document retrieval and vector search extension for SQLRustGo"

[dependencies]
sqlrustgo-types = { path = "../types" }
sqlrustgo-storage = { path = "../storage" }
sqlrustgo-parser = { path = "../parser" }
sqlrustgo-planner = { path = "../planner" }
sqlrustgo-graph = { path = "../graph" }
sqlrustgo-vector = { path = "../vector" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
anyhow = "1.0"
rusqlite = { version = "0.39", features = ["bundled"] }
bytemuck = "1.20"
dirs = "6.0"
parking_lot = "0.12"
sha2.workspace = true
hex.workspace = true
ed25519-dalek = "2.1"
rand.workspace = true
async-trait = "0.1"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1.0", features = ["rt-multi-thread", "macros"] }
k256 = "0.14.0-rc.9"
ring = "0.17"
rsa = "0.9"
pem = "3.0"
clap = { version = "4.0", features = ["derive"] }

[[bin]]
name = "sqlrustgo-gmp-cli"
path = "src/cli.rs"
doc = false

[[bin]]
name = "audit-chain-verify"
path = "src/cli/audit_chain_verify_main.rs"
doc = false

[dev-dependencies]
tempfile.workspace = true
