[package]
name = "sqlrustgo-graph"
version = "0.1.0"
edition = "2021"
description = "SQLRustGo Graph Engine - Property Graph with GMP traceability"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
dashmap = "6.1"

[dev-dependencies]
tempfile = "3.10"

[[test]]
name = "graph_tests"
path = "tests/graph_tests.rs"