[package]
name = "sqlrustgo-graph"
version = "0.1.0"
edition = "2021"
description = "SQLRustGo Graph Engine - Property Graph with GMP traceability"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
dashmap = "5.5"

[dev-dependencies]
tempfile = "3.10"
chrono = "0.4"

[[bench]]
name = "graph_benchmark"
harness = false

[[test]]
name = "graph_tests"
path = "tests/graph_tests.rs"