[package]
name = "sqlrustgo-optimizer"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
sqlrustgo-common.workspace = true
sqlrustgo-types.workspace = true
sqlrustgo-storage.workspace = true
serde.workspace = true
thiserror.workspace = true
log.workspace = true
async-trait.workspace = true
regex.workspace = true

[dev-dependencies]
tempfile.workspace = true
