[package]
name = "sqlrustgo-planner"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
sqlrustgo-common.workspace = true
sqlrustgo-types.workspace = true
sqlrustgo-parser.workspace = true
sqlrustgo-storage.workspace = true
serde.workspace = true
thiserror.workspace = true
log.workspace = true
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tempfile.workspace = true
