[package]
name = "sqlrustgo-qa"
version = "0.1.0"
edition = "2021"
authors = ["SQLRustGo Team"]
license = "MIT"

[dependencies]
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
thiserror = "2.0"

[dev-dependencies]
tempfile = "3.25"
