[package]
name = "sqlrustgo-qmd-bridge"
version = "0.1.0"
edition = "2021"
description = "QMD Bridge for SQLRustGo - Unified retrieval layer"
license = "Apache-2.0"
repository = "https://github.com/minzuuniversity/sqlrustgo"
keywords = ["database", "vector-search", "graph", "qmd"]
categories = ["database"]

[dependencies]
# SQLRustGo internal dependencies
sqlrustgo-types = { path = "../types" }
sqlrustgo-vector = { path = "../vector" }
sqlrustgo-graph = { path = "../graph" }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Async runtime
tokio = { version = "1.0", features = ["full"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
tokio-test = "0.4"
