[package]
name = "sqlrustgo-rag"
version = "2.3.0"
edition = "2021"
authors = ["SQLRustGo Team"]
license = "MIT"
description = "RAG (Retrieval Augmented Generation) library for SQLRustGo"

[dependencies]
thiserror = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
parking_lot = "0.12"
rayon = "1.10"

# SQLRustGo integration
sqlrustgo-storage = { path = "../storage", optional = true }
sqlrustgo-types = { path = "../types", optional = true }

[features]
default = []
sqlrustgo = ["sqlrustgo-storage", "sqlrustgo-types"]

[dev-dependencies]
criterion = "0.8"
tempfile = "3.14"

[[bench]]
name = "rag_benchmark"
harness = false