[package]
name = "sqlrustgo-security"
version = "0.1.0"
edition = "2021"
authors = ["SQLRustGo Team"]
description = "Security module with audit logging and session management"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
chrono = { version = "0.4", features = ["serde"] }
native-tls = "0.2"
pem = "1.0"
regex = "1.0"
parking_lot = "0.12"
uuid = { version = "1.0", features = ["v4", "serde"] }

aes-gcm = { version = "0.10", optional = true }
rand = { version = "0.8", optional = true }
zeroize = { version = "1.6", optional = true }

[features]
default = []
aes256 = ["dep:aes-gcm", "dep:rand", "dep:zeroize"]

[dev-dependencies]
tempfile = "3.0"
