[package]
name = "sqlrustgo-server"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
sqlrustgo-common.workspace = true
sqlrustgo-parser.workspace = true
sqlrustgo-planner.workspace = true
sqlrustgo-optimizer.workspace = true
sqlrustgo-executor.workspace = true
sqlrustgo-storage.workspace = true
sqlrustgo-catalog.workspace = true
sqlrustgo-transaction.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
log.workspace = true
env_logger.workspace = true
ctrlc.workspace = true
async-trait.workspace = true
actix-web = "4"
actix-rt = "2"
crossbeam-channel = "0.5"

[dev-dependencies]
tempfile.workspace = true
